<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUserActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/arrow_right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="TODO"
            android:src="@drawable/profile_placeholder"
            android:layout_gravity="center_horizontal"
            tools:ignore="ContentDescription,HardcodedText" />

        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/yeon_sung"
            android:text="Waves Of Food"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="35sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/signupTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create New User Admin"
            android:fontFamily="@font/yeon_sung"
            android:textSize="20sp"
            android:textColor="#4CAF50"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            tools:ignore="HardcodedText" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_person"
                android:contentDescription="@string/owner_icon" />

            <EditText
                android:id="@+id/ownerNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:autofillHints=""
                android:hint="Name"
                android:fontFamily="@font/yeon_sung"
                android:background="@android:color/transparent"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_email"
                android:contentDescription="@string/email_icon" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/email_or_phone_number"
                android:background="@android:color/transparent"
                android:fontFamily="@font/yeon_sung"
                android:inputType="textEmailAddress"
                android:textColorHint="#757575"
                tools:ignore="Autofill,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:autofillHints=""
                android:src="@drawable/ic_lock"
                android:contentDescription="@string/password_icon" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="Password"
                android:background="@android:color/transparent"
                android:fontFamily="@font/yeon_sung"
                android:inputType="textPassword"
                android:textColorHint="#757575"
                tools:ignore="Autofill,HardcodedText,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createAccountButton"
            app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/passwordEditText"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/greenbuttonshape"
            android:layout_gravity="center"
            android:outlineSpotShadowColor="@color/textColor"
            android:text="Create New User"
            android:fontFamily="@font/yeon_sung"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />



        <TextView
            android:id="@+id/designByTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Team 07"

            android:textSize="20sp"
            android:textColor="#4CAF50"
            android:fontFamily="@font/yeon_sung"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            tools:ignore="HardcodedText" />

    </LinearLayout>

</ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>