<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SignupActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="Profile Image"
                android:src="@drawable/profile_placeholder"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/appNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Waves Of Food"
                android:textSize="35sp"
                android:fontFamily="@font/yeon_sung"
                android:textStyle="bold"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@id/profileImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/signupTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yeon_sung"
                android:text="Sign Up Here For Your\nAdmin Dashboard"
                android:textSize="16sp"
                android:textColor="#4CAF50"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/appNameTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/locationEditText"
                android:layout_width="125dp"
                android:layout_height="32dp"
                android:layout_marginTop="24dp"
                android:hint="@string/choose_your_location"
                android:fontFamily="@font/yeon_sung"
                android:textStyle="bold"
                android:textColor="#4CAF65"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                android:background="@android:color/transparent"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signupTextView" />

            <TextView
                android:id="@+id/selectedLocationTextView"
                android:layout_width="373dp"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittextshape"
                android:drawableRight="@drawable/arrow_circle_down"
                android:text="Jaipur"
                android:drawablePadding="15dp"
                android:elevation="4dp"
                android:outlineSpotShadowColor="@color/textColor"
                android:paddingLeft="15dp"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/arrowDownButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/locationEditText" />


            <EditText
                android:id="@+id/ownerNameEditText"
                android:layout_width="375dp"
                android:layout_height="46dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/name_of_owner"
                android:inputType="textPersonName"
                android:fontFamily="@font/yeon_sung"
                android:drawableLeft="@drawable/user_02"
                android:drawablePadding="15dp"
                android:elevation="4dp"
                android:outlineSpotShadowColor="@color/textColor"
                android:paddingLeft="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectedLocationTextView" />

            <EditText
                android:id="@+id/restaurantNameEditText"
                android:layout_width="371dp"
                android:layout_height="49dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittextshape"
                android:hint="Name of Restaurant"
                android:fontFamily="@font/yeon_sung"
                android:drawableLeft="@drawable/home_02"
                android:drawablePadding="15dp"
                android:elevation="4dp"
                android:outlineSpotShadowColor="@color/textColor"
                android:paddingLeft="15dp"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ownerNameEditText" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="374dp"
                android:layout_height="47dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittextshape"
                android:hint="@string/email_or_phone_number"
                android:fontFamily="@font/yeon_sung"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="15dp"
                android:elevation="4dp"
                android:outlineSpotShadowColor="@color/textColor"
                android:paddingLeft="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/restaurantNameEditText" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="373dp"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittextshape"
                android:hint="Password"
                android:fontFamily="@font/yeon_sung"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/lock_01"
                android:drawablePadding="15dp"
                android:elevation="4dp"
                android:outlineSpotShadowColor="@color/textColor"
                android:paddingLeft="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailEditText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createAccountButton"
                android:layout_width="171dp"
                android:layout_height="49dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/greenbuttonshape"
                android:text="Create Account"
                android:fontFamily="@font/yeon_sung"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

            <TextView
                android:id="@+id/alreadyHaveAccountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:fontFamily="@font/yeon_sung"
                android:textSize="12sp"
                android:textColor="#4CAF4F"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/createAccountButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/designByTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Design By\n Team 07"
                android:textColor="#4CAF4F"
                android:fontFamily="@font/yeon_sung"
                android:textStyle="bold"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/alreadyHaveAccountTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>